fix for broken banner layout on firefox

--- a/src/components/CustomCarousel/styles.module.scss
+++ b/src/components/CustomCarousel/styles.module.scss
@@ -32,6 +32,10 @@
           height: 100%;
           object-position: 70%;
         }
+
+        &.gamesBg {
+          opacity: 0.3;
+        }
       }
 
       .overlayMobile {
@@ -68,7 +72,7 @@
           position: absolute;
           z-index: -1;
           height: 100%;
-          width: fit-content;
+          width: auto;
           top: 0;
           left: 0;
 
